--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.7.8",
     "autoprefixer": "^9.8.8",
     "core-js": "^3.8.3",
+    "flowbite": "^1.5.4",
     "postcss": "^8.2.15",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
