--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "ant-design-vue": "^1.7.8",
     "autoprefixer": "^9.8.8",
+    "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.4",
     "postcss": "^8.2.15",
