--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
     "flowbite": "^1.5.4",
+    "jquery": "^3.6.1",
     "postcss": "^8.2.15",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/jquery": "^3.5.14",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
